--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,11 +6,20 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+   <style>
+       body {background-color: rgb(217,247,247);}
+       h1 {text-align:center; font-size : 40px;}
+   </style>
     </head>
 
     <body>
         <div class="ui container">
-            <h1>Stock Screener</h1>
+            <h1 style="margin-top:30px;text-align:center; font-size : 40px; letter-spacing: 2px;">
+                Stock Screener
+            </h1>
+                <h2 style="margin-top: -10px; text-align:center; font-size : 20px;margin-bottom:60px; font-weight:lighter; font-style:italic;">
+                    Get your stock info with Yahoo Finance!
+                </h2>
             {% block content %}
             {% endblock %}
         </div>
