Finalize the UI with background image and new font

--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@ $(document).ready(function() {
 });
 </script>
 
-<h3 style="font-size:30px; margin-bottom: 25px;">Filters</h3>
+<h3 style="font-size:30px; font-family:Courier New; margin-bottom: 25px;">Filters</h3>
 
 <form method="get" style="margin-bottom: 35px">
 
@@ -55,7 +55,7 @@ $(document).ready(function() {
 
 </form>
 <hr style="height:2px;border-width:0;color:gray;background-color:gray">
-<h4 style="font-size:30px; margin-top: 25px;">Add stock</h4>
+<h4 style="font-size:30px; font-family:Courier New; margin-top: 25px;">Add stock</h4>
 <button id="add_symbol" class="ui button secondary" style="margin-top: 15px; margin-bottom: 25px;">
     Add Stocks
 </button>
